# sample-godot-rust-app

./: .gitignore  Cargo.toml  Cross.toml  Main.tscn  README.md  bind-library-with-godot.html  chapter_1.html  create-rust-gdnative-library.html  export-for-android.html  export-for-ios.html  export_presets.cfg  features.html  how-it-works.html  introduction.html  libsample_godot_rust_app_library.gdnlib  print.html  project.godot  release.keystore  release.keystore.gpg  requirements.html  rust-gdnative-from-scratch.html  searchindex.js  searchindex.json  setup-github-actions.html  setup-godot-project.html  setup-rust-project.html  supported-platforms.html  x86_64-pc-windows-gnu-llvm.Dockerfile
.github/workflows/: ci.yml  gh-pages.yml  godot-android.yml  godot-linux.yml  godot-windows.yml  godot.yml  rust-android.yml  rust-linux.yml  rust-macos.yml  rust-windows.yml  rust.yml  sandbox.yml
book/: book.toml  index.html  searchindex.json
book/src/: SUMMARY.md  bind-library-with-godot.md  create-rust-gdnative-library.md  export-for-android.md  export-for-ios.md  features.md  how-it-works.md  introduction.md  requirements.md  rust-gdnative-from-scratch.md  setup-github-actions.md  setup-godot-project.md  setup-rust-project.md  supported-platforms.md
dockerfiles/: armv7-linux-androideabi.Dockerfile  godot-ci-android-export.Dockerfile  godot-ci.Dockerfile  x86_64-apple-darwin.Dockerfile  x86_64-pc-windows-gnu.Dockerfile
excalidraw/: gdnative-to-android.excalidraw  gdnative-to-godot-scene.excalidraw  github-actions-workflow.excalidraw
scene/: Main.tscn
scenes/: LinkToFirstScene.gd  LinkToSecondScene.gd  Main.gdnlib  Main.tscn  core.gdnlib  first_scene.gdnlib  first_scene.tscn  second_scene.gdnlib  second_scene.tscn
src/: chapter_1.md  lib.rs
src/core/: Cargo.toml
src/core/src/: first_scene.rs  lib.rs  link_to_first_scene.rs  second_scene.rs
src/core/tests/: test.rs
src/first_scene/: Cargo.toml
src/first_scene/src/: lib.rs
src/first_scene/tests/: test.rs
src/fullscreen_colored_panel/: Cargo.toml
src/fullscreen_colored_panel/src/: lib.rs
src/root_node/: Cargo.toml
src/root_node/src/: lib.rs
src/second_scene/: Cargo.toml
src/second_scene/src/: lib.rs
tests/: test.rs
