[package]
name = "core"
version = "0.1.0"
authors = ["tommywalkie <tommywalkie@gmail.com>"]
edition = "2018"

# When using "cargo build", we will need to build two crates...
[lib]
doctest = false
crate-type = [
	"cdylib", # A GDNative library for Godot Engine
	"lib" # A regular Rust library to be included somewhere else
] 

[dependencies]
gdnative = "0.8" # Install Rust bindings for Godot Engine
fullscreen_colored_panel = { path = "../fullscreen_colored_panel" }

[dev-dependencies]
speculate = "0.1" # Install and use "speculate" for integration tests only

[target.armv7-linux-androideabi]
linker = "armv7-linux-androideabi-gcc"
