[package]
name = "root_node"
version = "0.1.0"
authors = ["tommywalkie <tommywalkie@gmail.com>"]
edition = "2018"

# When using "cargo build", we will need to build two crates...
[lib]
crate-type = [
	"cdylib", # One native library for C++ bindings for Godot Engine
	"lib" # One regular Rust library for integration tests
] 

[dependencies]
gdnative = "0.8" # Install Rust bindings for Godot Engine

[dev-dependencies]
speculate = "0.1" # Install and use "speculate" for integration tests only
